--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.img-shadow{
+    filter: drop-shadow(10px 30px 15px #3030307a);
+}
